src/objects/OpportunityLineItem/OpportunityLineItem.object-meta.xml
<CustomObject>
</CustomObject>