src/objects/OpportunityLineItem/fields/Amount_Net__c.field-meta.xml
<CustomField>
    <fullName>Amount_Net__c</fullName>
    <formula>TotalPrice  *  Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Price * PGo * Pwin</inlineHelpText>
    <label>Total Price Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>