src/objects/OpportunityLineItem/fields/CBT__c.field-meta.xml
<CustomField>
    <fullName>CBT__c</fullName>
    <formula>text(Opportunity.CBT_Tier_2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CBT</label>
    <type>Text</type>
</CustomField>