src/objects/OpportunityLineItem/fields/Closure_Actions__c.field-meta.xml
<CustomField>
    <fullName>Closure_Actions__c</fullName>
    <description>Closure Actions</description>
    <inlineHelpText>Actions to close within the next two weeks. Be specific and include the owners name</inlineHelpText>
    <label>Closure Actions</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>