src/objects/OpportunityLineItem/fields/Demand_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Demand_Decision_Date__c</fullName>
    <inlineHelpText>Demand needs to be loaded by this date</inlineHelpText>
    <label>Demand Decision Date</label>
    <type>Date</type>
</CustomField>