src/objects/OpportunityLineItem/fields/E_SIOP_Demand_Category__c.field-meta.xml
<CustomField>
    <fullName>E_SIOP_Demand_Category__c</fullName>
    <description>E/SIOP Demand Category</description>
    <inlineHelpText>Demand planning classification</inlineHelpText>
    <label>E/SIOP Demand Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Firm</fullName>
            </value>
            <value>
                <fullName>Forecast</fullName>
            </value>
            <value>
                <fullName>Gap</fullName>
            </value>
            <value>
                <fullName>MTO</fullName>
            </value>
            <value>
                <fullName>Not Loaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>