src/objects/OpportunityLineItem/fields/Extended_Price__c.field-meta.xml
<CustomField>
    <fullName>Extended_Price__c</fullName>
    <formula>Quantity *  Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>