src/objects/OpportunityLineItem/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>External Id field reference used in data migration. This field value is concatenation of &quot;Legacy Opportunity Number&quot; and &quot;Legacy Opportunity Line ID&quot;.
Example &quot;OFS-9994-0_3&quot;</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>