src/objects/OpportunityLineItem/fields/Forecast_Factor_AI__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Factor_AI__c</fullName>
    <label>Forecast Factor AI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>