src/objects/OpportunityLineItem/fields/Functional_Help_Required__c.field-meta.xml
<CustomField>
    <fullName>Functional_Help_Required__c</fullName>
    <description>Functional Help Required</description>
    <inlineHelpText>Other Honeywell functional help is required. Who and What?</inlineHelpText>
    <label>Functional Help Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>