src/objects/OpportunityLineItem/fields/Has_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Has_Schedule__c</fullName>
    <formula>IF(HasRevenueSchedule,&apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Schedule?</label>
    <type>Text</type>
</CustomField>