src/objects/OpportunityLineItem/fields/Include_in_CYO_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Include_in_CYO_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CYO Overdrive</description>
    <inlineHelpText>Check indicates the revenue from this order was NOT included in baseline AOP: Current-Year Revenue from this order will contribute to the +5% Contingency tracking to reinforce/overdrive the revenue AOP. Is included in SIP “+5% CYO Contingency” Metric.</inlineHelpText>
    <label>CYO Overdrive</label>
    <type>Checkbox</type>
</CustomField>