src/objects/OpportunityLineItem/fields/Include_Net_Rev_in_SRO_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Include_Net_Rev_in_SRO_Estimate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include Net Rev in SRO Estimate</description>
    <inlineHelpText>Check indicates revenue from this order is included in SRO estimate / No check indicates revenue from this order is potential upside to the SRO estimate.</inlineHelpText>
    <label>Included in SRO</label>
    <type>Checkbox</type>
</CustomField>