src/objects/OpportunityLineItem/fields/M_PM_Product__c.field-meta.xml
<CustomField>
    <fullName>M_PM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field should be populated with the GBE Product Type</inlineHelpText>
    <label>Product Cross Reference Name</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>Invalid M&amp;PM Product.  Must be active for 2021 Product Type Master File distributed by Finance.</errorMessage>
        <filterItems>
            <field>Product_Line_Cross_Ref__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Must choose from the 2021 Product Type Master File distributed by Finance.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_Line_Cross_Ref__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>