src/objects/OpportunityLineItem/fields/M_PM_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>M_PM_Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Type</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>