src/objects/OpportunityLineItem/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <formula>TEXT(Opportunity.SBU__c)</formula>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>