src/objects/OpportunityLineItem/fields/OpportunityAccountChange__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAccountChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OpportunityAccountChange</label>
    <type>Checkbox</type>
</CustomField>