src/objects/OpportunityLineItem/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Plant_Code_Master__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plant_Code_Master__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>