src/objects/OpportunityLineItem/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <formula>Opportunity.Platform__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform</label>
    <type>Text</type>
</CustomField>