src/objects/OpportunityLineItem/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <inlineHelpText>PGo * PWin</inlineHelpText>
    <label>Opportunity Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>