src/objects/OpportunityLineItem/fields/Revenue_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_End_Date__c</fullName>
    <inlineHelpText>To modify Revenue End date please edit Revenue Schedule</inlineHelpText>
    <label>Revenue End Date</label>
    <type>Date</type>
</CustomField>