src/objects/OpportunityLineItem/fields/Revenue_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Start_Date__c</fullName>
    <inlineHelpText>To modify Revenue Start date please edit Revenue Schedule</inlineHelpText>
    <label>Revenue Start Date</label>
    <type>Date</type>
</CustomField>