src/objects/OpportunityLineItem/fields/Revenue_Start_Range__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Start_Range__c</fullName>
    <formula>Revenue_Start_Date__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Start Range</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>