src/objects/OpportunityLineItem/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Repairs / Overhaul</fullName>
            </value>
            <value>
                <fullName>RMU</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Spares / AM / OEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>