src/objects/OpportunityLineItem/fields/RMU__c.field-meta.xml
<CustomField>
    <fullName>RMU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offering</label>
    <referenceTo>RMU_VALUE__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>