src/objects/OpportunityLineItem/fields/RMU_Platform__c.field-meta.xml
<CustomField>
    <fullName>RMU_Platform__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offering Platform</label>
    <referenceTo>OFFERING_MAPPER__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>