src/objects/OpportunityLineItem/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <formula>TEXT(Opportunity.SBU__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBU</label>
    <type>Text</type>
</CustomField>