src/objects/OpportunityLineItem/fields/ScheduleRevenue__c.field-meta.xml
<CustomField>
    <fullName>ScheduleRevenue__c</fullName>
    <formula>TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ScheduleRevenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>