src/objects/OpportunityLineItem/fields/Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Solution_Type__c</fullName>
    <label>Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BFE / SSFE</fullName>
            </value>
            <value>
                <fullName>OE - Original Equipment</fullName>
            </value>
            <value>
                <fullName>Repair and Overhaul</fullName>
            </value>
            <value>
                <fullName>RMU</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Spares - LRU and APU</fullName>
            </value>
            <value>
                <fullName>Spares - Repair Details</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>