src/objects/OpportunityLineItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>if(  SBU__c = &quot;D&amp;S&quot; , if(  Active__c = False , &quot;Closed&quot;  ,  text( Type__c ) ) , if( CONTAINS( text( Opportunity.StageName ) , &quot;Won&quot; ) , &quot;Booked&quot; , if( Opportunity.IsClosed = True , &quot;Closed&quot; , &quot;Forecast&quot; ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>