src/objects/OpportunityLineItem/fields/Tech_Sales__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sales__c</fullName>
    <label>Tech Sales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace Services</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>Auxiliary Power and Thermal Systems</fullName>
            </value>
            <value>
                <fullName>BendixKing</fullName>
            </value>
            <value>
                <fullName>Cockpit Systems</fullName>
            </value>
            <value>
                <fullName>Electric Power and Lighting</fullName>
            </value>
            <value>
                <fullName>Engines</fullName>
            </value>
            <value>
                <fullName>FM&amp;T National Security Campus</fullName>
            </value>
            <value>
                <fullName>HTSI</fullName>
            </value>
            <value>
                <fullName>Mechanical Components</fullName>
            </value>
            <value>
                <fullName>Navigation and Sensors</fullName>
            </value>
            <value>
                <fullName>Other Product Line</fullName>
            </value>
            <value>
                <fullName>Safety and Connectivity</fullName>
            </value>
            <value>
                <fullName>Space</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Wheels and Braking Systems</fullName>
            </value>
            <value>
                <fullName>Avionics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>