src/objects/OpportunityLineItem/fields/Tech_Sales_Country__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sales_Country__c</fullName>
    <formula>Text( Opportunity.Account.Report_Country_Name__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Sales Country</label>
    <type>Text</type>
</CustomField>