src/objects/OpportunityLineItem/fields/Tech_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>