src/objects/OpportunityLineItem/fields/Tech_Sales_Manager_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sales_Manager_Secondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Sales Manager Secondary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>