src/objects/OpportunityLineItem/fields/Tech_Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sales_Product__c</fullName>
    <label>Tech Sales Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tech_Sales__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Repair</fullName>
            </value>
            <value>
                <fullName>Adjacencies</fullName>
            </value>
            <value>
                <fullName>AGT1500</fullName>
            </value>
            <value>
                <fullName>AIMS/ VIA</fullName>
            </value>
            <value>
                <fullName>Air Cycle Systems</fullName>
            </value>
            <value>
                <fullName>Air Data Products</fullName>
            </value>
            <value>
                <fullName>Airframe Hydraulics</fullName>
            </value>
            <value>
                <fullName>Air Source Systems</fullName>
            </value>
            <value>
                <fullName>Air Turbine Start Systems &amp; Motors</fullName>
            </value>
            <value>
                <fullName>ALF502 / LF507</fullName>
            </value>
            <value>
                <fullName>APU 131</fullName>
            </value>
            <value>
                <fullName>APU 331</fullName>
            </value>
            <value>
                <fullName>APU 331 Large</fullName>
            </value>
            <value>
                <fullName>APU 36-100</fullName>
            </value>
            <value>
                <fullName>APU 36-150</fullName>
            </value>
            <value>
                <fullName>APU 36-155</fullName>
            </value>
            <value>
                <fullName>APU 36-200</fullName>
            </value>
            <value>
                <fullName>APU 36-280 / 36-300</fullName>
            </value>
            <value>
                <fullName>APU 36-50/55</fullName>
            </value>
            <value>
                <fullName>APU 660 / 700</fullName>
            </value>
            <value>
                <fullName>APU 85</fullName>
            </value>
            <value>
                <fullName>APU AMADs</fullName>
            </value>
            <value>
                <fullName>APU G250</fullName>
            </value>
            <value>
                <fullName>APU HGT1700</fullName>
            </value>
            <value>
                <fullName>APU HGT750</fullName>
            </value>
            <value>
                <fullName>APU Jet Fuel Starter</fullName>
            </value>
            <value>
                <fullName>APU JSF</fullName>
            </value>
            <value>
                <fullName>APU Misc Adv Tech</fullName>
            </value>
            <value>
                <fullName>APU Other D&amp;S</fullName>
            </value>
            <value>
                <fullName>APU RE100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>