src/objects/OpportunityLineItem/fields/Tech_Sales_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sales_Product_Line__c</fullName>
    <formula>if( Plant__r.SAP_Plant_Code__c = &apos;1600&apos;, &quot;Exterior AC Lighting&quot; ,
if( text( Opportunity.Tech_Sales__c ) = &apos;AT:&apos;, text( Opportunity.Tech_Sales_Product_Area__c ) ,
 M_PM_Product__r.Product_Line__r.Name 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Sales Product Line</label>
    <type>Text</type>
</CustomField>