src/objects/OpportunityLineItem/fields/Tech_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sales_Region__c</fullName>
    <formula>text( Opportunity.Account.Region_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Sales Region</label>
    <type>Text</type>
</CustomField>