src/objects/OpportunityLineItem/fields/Terms_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Terms_in_Months__c</fullName>
    <label>Terms in Months</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>