src/objects/OpportunityLineItem/fields/TestEnd__c.field-meta.xml
<CustomField>
    <fullName>TestEnd__c</fullName>
    <formula>PricebookEntry.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestEnd</label>
    <type>Text</type>
</CustomField>