src/objects/OpportunityLineItem/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APO</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Forecast</fullName>
                <default>true</default>
                <label>Forecast</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>