src/objects/OpportunityLineItem/validationRules/DnS_Opportunity_Product_date_check.validationRule-meta.xml
<ValidationRule>
    <fullName>DnS_Opportunity_Product_date_check</fullName>
    <active>true</active>
    <description>Opportunity Product Date should not be prior to Opportunity close date</description>
    <errorConditionFormula>and(
not CONTAINS( $Profile.Name, &quot;API&quot; ), 
not CONTAINS( $Profile.Name, &quot;Admin&quot; ), 
SBU__c = &quot;D&amp;S&quot;, 
Text( Type__c ) = &quot;Forecast&quot;,
Opportunity.Advanced_Funding__c = false,
ServiceDate &lt; Opportunity.CloseDate
)</errorConditionFormula>
    <errorDisplayField>ServiceDate</errorDisplayField>
    <errorMessage>Opportunity Product Date should not be prior to Opportunity close date ! Please check &quot;Close Date&quot; of Opportunity !</errorMessage>
</ValidationRule>