src/objects/OpportunityLineItem/validationRules/DnS_Protect_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>DnS_Protect_Record</fullName>
    <active>true</active>
    <errorConditionFormula>and(
 not CONTAINS( $Profile.Name, &quot;API&quot; ), 
 not CONTAINS( $Profile.Name, &quot;Admin&quot; ), 
 not CONTAINS( $Profile.Name, &quot;D&amp;S Sales Analyst&quot; ), 
 SBU__c = &quot;D&amp;S&quot;,
 or( 
  Text( Type__c ) = &apos;Booked&apos;
  
 )
)</errorConditionFormula>
    <errorMessage>This type of record can only be changed by an Administrator.</errorMessage>
</ValidationRule>