src/objects/OpportunityLineItem/validationRules/DnS_Protect_Types.validationRule-meta.xml
<ValidationRule>
    <fullName>DnS_Protect_Types</fullName>
    <active>false</active>
    <errorConditionFormula>and(
 not CONTAINS( $Profile.Name, &quot;API&quot; ), 
 not CONTAINS( $Profile.Name, &quot;Admin&quot; ), 
 not CONTAINS( $Profile.Name, &quot;D&amp;S Sales Analyst&quot; ), 
 SBU__c = &quot;D&amp;S&quot;,
 ISCHANGED( Type__c ),
 or( 
  Text( Type__c ) = &apos;Booked&apos;,
  PRIORVALUE( Type__c ) = &apos;Booked&apos;,
  Text( Type__c ) = &apos;APO&apos;,
  PRIORVALUE( Type__c ) = &apos;APO&apos;
 )
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Type can only be changed by an Administrator.</errorMessage>
</ValidationRule>