src/objects/OpportunityLineItem/validationRules/Enforce_WholeNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_WholeNumber</fullName>
    <active>true</active>
    <description>Code workaround to ensure only whole number is entered into a number(10,2) field</description>
    <errorConditionFormula>MOD( Quantity ,1)   &lt;&gt; 0  &amp;&amp;  (Opportunity.RecordTypeId != $Label.Opportunity_BGA_Recordtype) &amp;&amp;  (Opportunity.RecordTypeId  !=  $Label.BGA_OE_Opportunity )</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>Please enter a whole number</errorMessage>
</ValidationRule>