src/objects/OpportunityLineItem/validationRules/Probability_not_greaterthan_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Probability_not_greaterthan_100</fullName>
    <active>false</active>
    <description>Probability cannot be greater than 100</description>
    <errorConditionFormula>AND( 
 not CONTAINS( $Profile.Name, &quot;API&quot; ), 
 not CONTAINS( $Profile.Name, &quot;Admin&quot; ), 
 or(
  Probability__c &gt; 1,
  Probability__c &lt;0
 )
)</errorConditionFormula>
    <errorDisplayField>Probability__c</errorDisplayField>
    <errorMessage>Probability cannot be greater than 100</errorMessage>
</ValidationRule>