src/objects/OpportunityLineItem/validationRules/Service_Date_can_not_be_less_than_Opp_Cl.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Date_can_not_be_less_than_Opp_Cl</fullName>
    <active>true</active>
    <description>Service Date can not be less than Opp Close Date</description>
    <errorConditionFormula>IF(
AND(
not CONTAINS( $Profile.Name, &quot;API&quot; ),
not CONTAINS( $Profile.Name, &quot;Admin&quot; ),
Opportunity.CloseDate &gt; ServiceDate ,
OR(
Opportunity.RecordTypeId == $Label.BGA_AM_Short_Cycle,
Opportunity.RecordTypeId == $Label.Opportunity_BGA_Recordtype,
Opportunity.RecordTypeId == $Label.BGA_Operator
)
),
true,
false
)</errorConditionFormula>
    <errorDisplayField>ServiceDate</errorDisplayField>
    <errorMessage>Opportunity product can not have Date earlier than Opportunity Close Date.</errorMessage>
</ValidationRule>